src/app/shell/RefreshButton.m.scss
@use '../variables' as *;
@use '../dim-ui/tooltip-mixins' as *;

.refreshButton {
  composes: resetButton from '../dim-ui/common.m.scss';
  position: relative;
}

.userIsPlaying {
  background-color: #3fe700;
  // Just for fun - on Safari, on wide color displays, this is a very bright green
  background-color: lch(81% 132 132);
  height: 6px;
  width: 6px;
  border-radius: 50%;
  position: absolute;
  bottom: -4px;
  right: -4px;
}

.outOfDate {
  color: $red;
  background-color: #1b1b2d;
  height: 14px;
  width: 14px;
  padding: 2px;
  font-size: 10px;
  border-radius: 50%;
  position: absolute;
  bottom: -8px;
  right: -8px;
}

.errorTooltip {
  @include tooltip-background-color(scale-color($red, $lightness: -90%));
  @include tooltip-border-color($red);
  @include tooltip-ribbon-color($red);

  max-width: 800px;
}

.errorDetails {
  h2 {
    margin: 0 0 8px 0;
  }
  p {
    margin-bottom: 1em;
  }
}

